Fix spacing issues on business index

--- a/app/assets/stylesheets/components/profile/user_profile.scss
+++ b/app/assets/stylesheets/components/profile/user_profile.scss
@@ -85,6 +85,8 @@
 .reviewed-restaurant img {
   width: 60px;
   height: 60px;
+  border-radius: 3px;
+  margin-right: 10px;
 }
 
 .reviewed-restaurant a {
