--- a/app/assets/stylesheets/components/restaurant_preview/restaurant_index.scss
+++ b/app/assets/stylesheets/components/restaurant_preview/restaurant_index.scss
@@ -24,7 +24,7 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 15px;
-  padding-right: 50px;
+  padding-right: 20px;
 }
 
 .preview-info link {
